# anonytor-client-socket

./: CMakeLists.txt  Test.h  config.h  main.cpp
controller/: test.cpp  test.h
controller/connection/: BaseConnection.cpp  BaseConnection.h  ControlConnection.cpp  ControlConnection.h  TransferConnection.cpp  TransferConnection.h
controller/definition/: Handshake.cpp  Handshake.h  Notice.h  Request.cpp  Request.h  Response.cpp  Response.h  Slice.cpp  Slice.h
controller/task/: BaseTask.cpp  BaseTask.h
include/b64/: b64.h
